--- a/css/styles.css
+++ b/css/styles.css
@@ -20,3 +20,13 @@ circle {
 }
 .beer {
 padding: 80px;}
+
+#pageHeader {
+  min-height: 600px;
+  background-image: url(../assets/img/hero.png);
+  background-position: center;
+  background-size: cover;
+}
+h1 {
+  text-align: center;
+}
