--- a/css/styles.css
+++ b/css/styles.css
@@ -30,3 +30,59 @@ padding: 80px;}
 h1 {
   text-align: center;
 }
+/*flipping images*/
+.flip3D {
+  width: 200px;
+  height: 200px;
+  margin: 10px;
+  float: left;
+}
+
+.flip3D > .front {
+  position: center;
+  -webkit-transform: perspective( 600px) rotateY( 0deg);
+  transform: perspective( 600px) rotateY( 0deg);
+  background: #FC0;
+  width: 200px;
+  height: 200px;
+  border-radius: 7px;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  transition: -webkit-transform .5s linear 0s;
+  transition: transform .5s linear 0s;
+}
+
+.flip3D > .back {
+  position: absolute;
+  -webkit-transform: perspective( 600px) rotateY( 180deg);
+  transform: perspective( 600px) rotateY( 180deg);
+  background: #8ffeee;
+  width: 200px;
+  height: 200px;
+  border-radius: 7px;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  transition: -webkit-transform .5s linear 0s;
+  transition: transform .5s linear 0s;
+}
+
+.flip3D:hover > .front {
+  -webkit-transform: perspective( 600px) rotateY( -180deg);
+  transform: perspective( 600px) rotateY( -180deg);
+}
+
+.flip3D:hover > .back {
+  -webkit-transform: perspective( 600px) rotateY( 0deg);
+  transform: perspective( 600px) rotateY( 0deg);
+}
+#teamDiv{
+  position: absolute;
+  width: 800px;
+
+  margin: auto;
+  padding: 60px;
+  background-color: #f2c41f;
+}
+.foodCarts{
+  margin-top: 700px;
+}
